--- a/backend/teleatendimento/gradle.properties
+++ b/backend/teleatendimento/gradle.properties
@@ -5,3 +5,5 @@ org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
+
+gormVersion=8.1.1
